created the instructions

--- a/index.html
+++ b/index.html
@@ -19,14 +19,13 @@
             <h3>Instructions:</h3>
 
             <p>
-                You will be given a random target number at the start of the game. 
+                Check the goal score before you begin. 
             <p>
-                There are 4 crystals below. By clicking on each you will add a specific amount of points
-                to your total score.
+                By clicking on the images, you can increase your points until you reach the goal.
             <p>
                 You can win the game by matching your number with the target number.
             <p>
-                Value of each crystal is hidden until you click on it.
+                Value of each image is hidden until you click on it.
             <p>
                 The game restarts if you win or lose the round, and restarts with a new random target number.
             </p>
